connecting quality measures for multi-subject sentences